--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,34 @@
-buildscript {
-    ext {
-        springBootVersion = '2.5.1'
-    }
-    repositories {
-        mavenCentral()
-        jcenter()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    }
+plugins {
+    id 'org.springframework.boot' version '2.5.1'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'java'
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-
 group 'org.example'
-version '1.0-SNAPSHOT'
+version '1.0-SNAPSHOT' + new Date().format("yyyyMMHHmmss")
 
 repositories {
     mavenCentral()
+    jcenter()
+}
+
+// for JUnit5
+test {
+    useJUnitPlatform()
 }
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.projectlombok:lombok')
-    compile('org.springframework.boot:spring-boot-starter-data-jpa') // 스프링부트용 Spring Data Jpa 추상화 라이브러리
-    compile('com.h2database:h2') // 인메모리 관계형 데이터베이스, 메모리 실행으로 애플리케이션 재시작 시 초기화. 테스트 용도로 많이 사용. JPA 테스트, 로컬 환경 구동용도
+    implementation('org.springframework.boot:spring-boot-starter-web')
+
+    // Lombok
+    implementation('org.projectlombok:lombok')
     annotationProcessor('org.projectlombok:lombok')
+    testImplementation('org.projectlombok:lombok')
+    testAnnotationProcessor('org.projectlombok:lombok')
+
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa') // 스프링부트용 Spring Data Jpa 추상화 라이브러리
+    implementation('com.h2database:h2') // 인메모리 관계형 데이터베이스, 메모리 실행으로 애플리케이션 재시작 시 초기화. 테스트 용도로 많이 사용. JPA 테스트, 로컬 환경 구동용도
 
     testImplementation 'junit:junit:4.13.1'
-    testCompile('org.springframework.boot:spring-boot-starter-test')
-    testAnnotationProcessor('org.projectlombok:lombok')
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
