Mustache 로 메인 페이지 작성

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ test {
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
+    // Mustache
+    implementation('org.springframework.boot:spring-boot-starter-mustache')
 
     // Lombok
     implementation('org.projectlombok:lombok')
